playing with dark mode

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
         <script type="text/javascript" src="scripts/secrets.js"></script>
         <link rel="icon" href="purple.png">
 
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
         
     </head>
 
@@ -82,10 +79,10 @@
                 
                             <div class = "linksContainer2">
                                 <div id = "crossFade">
-                                    <img class="top" alt="Twitter" src="images/twitterHover.png" 
+                                    <img class="top" alt="Twitter" src="images/twitter_black.jpg" 
                                         style = "width:20px; height: 20px; margin: 15px;">
                                     <a class = "bottom" href="https://twitter.com/sophiegroenwold" target = "_blank">
-                                        <img border="0" alt="Facebook" src="images/twitterHover.png" 
+                                        <img border="0" alt="Facebook" src="images/twitter_black.jpg" 
                                         style = "width:20px; height: 20px; margin: 15px;"></a>
                                 </div>
                             </div>
@@ -131,7 +128,7 @@
                         to dialect performance in NLG, to measuring compound societal biases. You can see a sample of our work from EMNLP 2020 
                         <a class = link target = "_blank" href = "https://www.aclweb.org/anthology/2020.emnlp-main.473/">here</a>.</p>
 
-                    <p class = "block">I also work to support womxn in STEM as the External VP of
+                    <p class = "block">I also work to support women in STEM as the External VP of
                         <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">UCSB's Society of Women Engineers</a>. I connect 
                         our members with opportunities in industry and am the lead coordinator for our Evening with Industry, 
                         an annual networking event that brings together 100+ students and company representatives. 
@@ -141,7 +138,7 @@
                             <a class = link target = "_blank" href = "https://open.spotify.com/user/sophiegroenwold">
                                 <span id = "mySong"></span>&nbsp;by&nbsp;<span id = "myArtist"></span>
                             </a>
-                            <img src="images/music.gif" alt="musicGif"/>
+                            <img class = "music" src="images/music_white.gif" alt="musicGif"/>
                         </span>
                     </p>
 
