--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
                     <p class = "block">
                         I'm a student at UC Santa Barbara, where I'm 
                         working towards a major in computer science and a minor in history. 
-                        Lately, I've been wfh out of Los Angeles, CA.
                     </p>
 
                     <p class = "block">
@@ -135,22 +134,11 @@
                     </p>
 
                     <p class = "block">
-                        I'm currently a software engineering intern at Twitter.
+                        This past summer, I was a software engineering intern at Twitter.
                         I've also done work with the <a class = link target = "_blank" href = "http://nlp.cs.ucsb.edu/">UCSB NLP Group</a> 
                         and am currently the President of 
                         <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">UCSB's Society of Women Engineers</a>.
                     </p>
-
-                    <!-- <p class = "block">Over the past year, I've worked with my team in the 
-                        <a class = link target = "_blank" href = "http://nlp.cs.ucsb.edu/">UCSB NLP Group</a> on
-                        issues within the realm of computational social science. Our interests have gone from linguistic diversity,
-                        to dialect performance in NLG, to measuring compound societal biases. You can see a sample of our work from EMNLP 2020 
-                        <a class = link target = "_blank" href = "https://www.aclweb.org/anthology/2020.emnlp-main.473/">here</a>.</p>
-
-                    <p class = "block">I also work to support women in STEM as the External VP of
-                        <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">UCSB's Society of Women Engineers</a>. I connect 
-                        our members with opportunities in industry and am the lead coordinator for our Evening with Industry, 
-                        an annual networking event that brings together 100+ students and company representatives.  -->
 
                     <p class = "block">
                         <span id = "songContainer">Right now, I'm listening to 
@@ -172,7 +160,9 @@
 
                     <p class = "block">
                         <i>Twitter</i><br>
-                        I'm currently a software engineer intern at Twitter.
+                        During the summer of 2021 I interned at Twitter. As a backend software engineer intern working in Ads, 
+                        I developed an API endpoint for serving internal audit information and assisted a team-wide navigation 
+                        to an API- and GraphQL-first architecture.
                     </p>
 
                     <p class = "block">
@@ -185,18 +175,18 @@
 
                     <p class = "block">
                         <i>Guardian</i><br>
-                        In the summer of 2020 I was a software engineer intern at Guardian. During my time here, I developed a pipeline
+                        In the summer of 2020 I was a software engineer intern at Guardian. During my time there, I developed a pipeline
                         for processing user provisioning requests in SQL. I also worked closely with PMs to manage Agile metrics for a 
                         release train with 150+ members.
                     </p>
 
-                    <h2>Projects</h2>
+                    <!-- <h2>Projects</h2>
 
                     <p class = "block">
                         <a class = internallink target="_blank" href = "https://redditometer.herokuapp.com"><i>Redditometer</i> →</a><br>
                         An web app built in Python that uses NLP to rate the toxicity of subreddits. View the source code 
                         <a class = link target = "_blank" href = "https://github.com/sophiegroenwold/reddit-stats">here</a>.
-                    </p>
+                    </p> -->
 
                     <h2>Extras</h2>
 
