--- a/index.html
+++ b/index.html
@@ -125,20 +125,26 @@
                     <h2>Hi, I'm Sophie!</h2>
 
                     <p class = "block">
-                        I'm a student at UC Santa Barbara, where I'm 
-                        working towards a major in computer science and a minor in history. 
+                        I'm a recent grad from UC Santa Barbara, where I received a B.S. in
+                        Computer Science and a Minor in History.
+                    </p>
+
+                    <p class = "block">
+                        My SWE offer from Twitter was recently rescinded, so I'm on the job market – 
+                        please feel free to reach out to me with any open new grad software engineering 
+                        positions.
                     </p>
 
                     <p class = "block">
                         Here's my <a class = link target = "_blank" href = "resume.pdf">resume</a>.
                     </p>
 
-                    <p class = "block">
+                    <!-- <p class = "block">
                         This past summer, I was a software engineering intern at Twitter.
                         I've also done work with the <a class = link target = "_blank" href = "http://nlp.cs.ucsb.edu/">UCSB NLP Group</a> 
                         and am currently the President of 
                         <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">UCSB's Society of Women Engineers</a>.
-                    </p>
+                    </p> -->
 
                     <p class = "block">
                         <span id = "songContainer">Right now, I'm listening to 
@@ -152,7 +158,7 @@
 
                     <p class = "block">
                     In my free time, I dance (I was a ballet dancer for 10+ years!) and read historical fiction and crime novels
-                        (or more accurately, add those books to my bookshelf). 
+                        (or more accurately, add those books to my to-be-read list). 
                     </p>
 
                     <a id="Experience"></a>
@@ -166,15 +172,28 @@
                     </p>
 
                     <p class = "block">
-                        <a class = internallink target = "_blank" href = "http://nlp.cs.ucsb.edu/"><i>UCSB Natural Language Processing Group</i> →</a><br>
+                        <a class = link target = "_blank" href = "http://nlp.cs.ucsb.edu/"><i>UCSB Natural Language Processing Group</i></a><br>
                         My team and I work within the realm of computational social science under Professor William Wang. Our interests 
                         have gone from lingustic diversity, to dialect performance in natural language generation, to measuring 
-                        compound societal biases. You can see our published work from EMNLP 2020 
-                        <a class = link target = "_blank" href = "https://www.aclweb.org/anthology/2020.emnlp-main.473/">here</a>.
+                        compound societal biases. You can view our first-authored published work:
+
+                        <ul>
+                            <li>
+                                <i>Towards Understanding Gender-Seniority Compound Bias in Natural Language Generation.</i>
+                                To appear in Proceedings of Language Resources and Evaluation Conference (LREC) 2022.
+                                <a class = link target = "_blank" href = "https://arxiv.org/abs/2205.09830">[paper]</a>
+                            </li> 
+                            <li>
+                                <i>Investigating African-American Vernacular English in Transformer-Based Text Generation.</i>
+                                In Proceedings of Empirical Methods in Natural Language Processing (EMNLP) 2020.
+                                <a class = link target = "_blank" href = "https://aclanthology.org/2020.emnlp-main.473/">[paper]</a>
+                            </li> 
+                        </ul>
+                        <!-- <a class = link target = "_blank" href = "https://www.aclweb.org/anthology/2020.emnlp-main.473/">here</a>. -->
                     </p>
 
                     <p class = "block">
-                        <i>Guardian</i><br>
+                        <i>Guardian Life Insurance</i><br>
                         In the summer of 2020 I was a software engineer intern at Guardian. During my time there, I developed a pipeline
                         for processing user provisioning requests in SQL. I also worked closely with PMs to manage Agile metrics for a 
                         release train with 150+ members.
@@ -191,9 +210,20 @@
                     <h2>Extras</h2>
 
                     <p class = "block">
-                        <a class = internallink target = "_blank" href = "https://ucsbswe.weebly.com/"><i>UCSB Society of Women Engineers</i> →</a><br>
-                        Our chapter of SWE serves as UCSB's leading organization for supporting women in engineering. I'm super passionate about supporting
-                        women in STEM, and I love this org! Since my first year, I've worked in community outreach, professional development, and leadership. 
+                        <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/"><i>UCSB Society of Women Engineers</i></a><br>
+                        Our chapter of SWE serves as UCSB's leading organization for supporting female-identifying and nonbinary students 
+                        in engineering. I'm super passionate about supporting women in STEM, and I love this org! I've held the positions 
+                        of President (2021-22), External VP (2020-21), and Outreach Chair (2019-20).
+                    </p>
+
+                    <p class = "block">
+                        <i>Awards & Honors</i><br>
+                        <ul>
+                            <li>UCSB Computer Science Student of the Year, 2022</li>
+                            <li>UC Regent's Scholar, 2018 - 2022</li>
+                            <li>Honors College of Engineering, 2018 - 2022</li> 
+                            <li>UCSB Computer Science Outstanding Undergraduate Research Award, 2021</li> 
+                        </ul>
                     </p>
             </div>
         </div>
