--- a/index.html
+++ b/index.html
@@ -126,13 +126,7 @@
 
                     <p class = "block">
                         I'm a recent grad from UC Santa Barbara, where I received a B.S. in
-                        Computer Science and a Minor in History.
-                    </p>
-
-                    <p class = "block">
-                        My SWE offer from Twitter was recently rescinded, so I'm on the job market – 
-                        please feel free to reach out to me with any open new grad software engineering 
-                        positions.
+                        Computer Science and a Minor in History. I'm also an incoming software engineer at Oracle.
                     </p>
 
                     <p class = "block">
